--- a/theme/blank-wordpress-theme/style.css
+++ b/theme/blank-wordpress-theme/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Dsoble theme
+Theme Name: Fiveint theme
 Theme URI: http://www.fileworld.in;
 Author: Siddharth Singh
 Author URI: http://www.fileworld.in
@@ -15,6 +15,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 /* =WordPress Core css 
 -------------------------------------------------------------- */
+
 .alignnone {
     margin: 5px 20px 20px 0;
 }
